adds methodology and early results

--- a/svhn/report/references.bib
+++ b/svhn/report/references.bib
@@ -1,5 +1,3 @@
-
-
 @article{svmkernels,
     author =       "H. Bouirouga and S.E. Fkihi and A. Jilbab and D. Aboutajdine",
     title =        "Comparison of Performance between Different SVM Kernels for the Identification of Adult Video",
@@ -13,11 +11,26 @@
  
 @misc{tfmnist,
     author    = "Tensorflow",
-    year      = "2017"
+    year      = "2017",
     title     = "Deep MNIST for Experts",
     url       = "https://www.tensorflow.org/versions/r1.2/get\_started/mnist/pros"
 }
 
 
 
+@article{algoperformance,
+    author =       "A. Bordes and S. Ertekin and J. Weston and L. Bottou",
+    title =        "Fast Kernel Classifiers with Online and Active Learning",
+    journal =      "Journal of Machine Learning Research",
+    volume =       "6",
+    number =       "1",
+    pages =        "1579--1619",
+    year =         "2005",
+}
 
+@misc{nnoptim,
+    author    = "Andrej Kaparthy",
+    year      = "2017",
+    title     = "CS231n Convolutional Neural Networks for Visual Recognition: Hyperparameter Tuning Course Notes",
+    url       = "http://cs231n.github.io/neural-networks-3/"
+}
