--- a/svhn/report/references.bib
+++ b/svhn/report/references.bib
@@ -34,3 +34,10 @@
     title     = "CS231n Convolutional Neural Networks for Visual Recognition: Hyperparameter Tuning Course Notes",
     url       = "http://cs231n.github.io/neural-networks-3/"
 }
+
+@misc{problemperformance,
+    author    = "Rodrigo Benenson",
+    year      = "2018",
+    title     = "Classification Dataset Results",
+    url       = "http://rodrigob.github.io/are\_we\_there\_yet/build/classification\_datasets\_results.html\#4d4e495354"
+}
